Fixed chat timestamp visibility on scroll

--- a/css/session-features.css
+++ b/css/session-features.css
@@ -491,6 +491,7 @@
   overflow-y: scroll;
   max-height: 200px;
   /* padding: 0 0 10px 0; */
+  padding: 20px 0 0 0;
 }
 
 ::-webkit-scrollbar {
